--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
-    <link href="/style.css" rel="stylesheet" />
-    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-    <meta name="description" content="Index of PromptCutterApp" />
+    <title>Welcome to Prompt Cutter!</title>
+    <link href="style.css" rel="stylesheet" />
+    <link rel="icon" href="icon.svg" type="image/svg+xml" />
+    <meta name="description" content="Index of Prompt Cutter" />
   </head>
 
   <body>
@@ -68,7 +68,7 @@
       </section>
       <section class="output"></section>
 
-      <script defer type="module" src="/index.js"></script>
+      <script defer type="module" src="index.js"></script>
     </main>
   </body>
 </html>
