--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Prompt Cutter!</title>
+    <title>Hello World</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" href="icon.svg" type="image/svg+xml" />
-    <meta name="description" content="Index of Prompt Cutter" />
+    <meta name="description" content="Index of PromptCutterApp" />
   </head>
 
   <body>
@@ -28,20 +28,12 @@
 
       <section class="title">
         <h1>Paste your text below ⬇️</h1>
-        <div>
-          <p>
-            Your text will be cut in
-            <input
-              type="number"
-              id="char-limit"
-              min="0"
-              step="100"
-              value="400"
-            />
-            characters each. (You can change the limit
-            <a href="#char-limit">here!</a>)
-          </p>
-        </div>
+        <p>
+          Your text will be cut in
+          <input type="number" id="char-limit" min="0" step="100" value="400" />
+          characters each. (You can change the limit
+          <a href="#char-limit">here!</a>)
+        </p>
       </section>
       <section class="input">
         <textarea></textarea>
