--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Welcome to Prompt Cutter</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" href="icon.svg" type="image/svg+xml" />
-    <meta name="description" content="Index of PromptCutterApp" />
+    <meta name="description" content="Main page of Prompt Cutter" />
   </head>
 
   <body>
